# eb-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRODUCT_MANIFEST.txt  README.md  SECURITY.md  cog.toml  dist-workspace.toml  lychee.toml  pixi.toml  prek.toml
.github/workflows/: ci_docs.yml  ci_prek.yml  ci_release.yml  ci_test.yml
docs/: export.el
docs/orgmode/: changelog.org  contributing.org  index.org  (+1 more)
scripts/: check-doc-links.sh  gen-rust-api.sh  resolve_easyconfig_eb.py  sphinx-build-docs.sh
src/: campaign.rs  domain.rs  eb_emit.rs  eb_maintainer.rs  eb_parse.rs  eb_style.rs  eb_template_constants.rs  foreign.rs  hierarchy.rs  lib.rs  main.rs  manifest.rs  mcp.rs  package.rs  package_catalog.rs  package_closure.rs  package_config.rs  package_emit.rs  package_solve.rs  package_sources.rs  package_workflow.rs  report.rs  resolvo_provider.rs  sbom.rs  select.rs  spack_syntax.rs  target.rs  version.rs
tests/: build_list_and_stack_diff.rs  bump_emit.rs  bump_workflow.rs  campaign.rs  canonical_cli.rs  container_contract.rs  eon_core_rgpot.rs  eon_foss_2026_1.rs  eon_packaging.rs  foreign_conditions.rs  foreign_ingest.rs  foreign_package_plan.rs  goal_scenario.rs  manifest_requires_resolvo.rs  mcp_v1.rs  package_catalog.rs  package_closure.rs  package_closure_write.rs  package_config.rs  package_model.rs  package_sources_discovery.rs  package_workflow.rs  profile_emission.rs  public_metadata.rs  qmcpack_foss_2026_1.rs  real_tree_scale.rs  reproduce_real_prs.rs  stack_policy.rs  target_config.rs
(+209 files in other folders)
