[package]
name = "eb_stack"
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
description = "Turn conda-forge, Spack, and EasyBuild recipes into Resolvo-solved variants, CycloneDX SBOMs, and build-evaluated package bundles"
license = "MIT"
authors = ["Rohit Goswami <rgoswami@ieee.org>"]
repository = "https://github.com/HaoZeke/eb-stack"
homepage = "https://eb-stack.rgoswami.me"
documentation = "https://eb-stack.rgoswami.me"
readme = "README.md"
keywords = ["easybuild", "hpc", "dependency-resolution", "toolchain", "sbom"]
categories = ["command-line-utilities", "development-tools", "science"]
exclude = [
    ".claude/",
    ".codex/",
    ".pixi/",
    "docs/build*/",
    "target/",
]

[[bin]]
name = "eb-stack"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
regex = "1"
resolvo = { version = "0.11", features = ["version-ranges"] }
version-ranges = "0.1"
serde_yaml = "0.9"
toml = "0.9"
cyclonedx-bom = "0.8"

[dev-dependencies]
tempfile = "3"
